# stylish-stringlike

./: Cargo.toml  README.md
src/: lib.rs  main.rs  repeat.rs  segmentation.rs  span.rs  span_widget.rs  stringlike.rs  text.rs  text_widget.rs
src/text/: expandable.rs  graphemes.rs  joinable.rs  mod.rs  paintable.rs  painter.rs  pushable.rs  repeat.rs  replaceable.rs  sliceable.rs  splitable.rs  styled_grapheme.rs  tag.rs  width.rs  width_sliceable.rs
src/text/spans/: mod.rs  search_tree.rs  span.rs
src/widget/: hbox.rs  mod.rs  repeat.rs  text_widget.rs  truncatable.rs
