[package]
name = "stylish-stringlike"
version = "0.1.0"
authors = ["Jason Ross <jasonross1024@gmail.com>"]
edition = "2018"
description = "API for string-like objects that have styles applied."
readme = "README.md"

[lib]
name = "stylish_stringlike"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.7.1"
unicode-width = "0.1.5"
regex = "1.5.4"

[dev-dependencies]
ansi_term = "0.12.1"
